// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`characterization fixture: published attempt (ISS8203 slice 0) containment commands (Parse path) put the coin in the jar 1`] = `
Object {
  "result": Object {
    "attempt": Object {
      "actions": Array [
        Object {
          "challenges": Array [],
          "desiredResult": Object {
            "containment": "In",
            "from": Object {
              "referentTarget": Object {
                "groundedId": "OBJECT#Coin",
                "referentType": "objectSpan",
                "shortName": "coin",
                "span": "coin",
                "stableRefKey": "coinRef",
              },
              "referentType": "currentHost",
            },
            "kind": "change",
            "object": Object {
              "groundedId": "OBJECT#Coin",
              "referentType": "objectSpan",
              "shortName": "coin",
              "span": "coin",
              "stableRefKey": "coinRef",
            },
            "primitive": "transferMembership",
            "to": Object {
              "groundedId": "OBJECT#Jar",
              "referentType": "objectSpan",
              "shortName": "jar",
              "span": "jar",
              "stableRefKey": "jarRef",
            },
          },
          "desiredResultDescription": "Put coin in jar",
          "id": "<minted id 1>",
          "kind": "position",
        },
      ],
      "narrationUnits": Array [
        Object {
          "covers": Array [
            "<minted id 1>",
          ],
          "variants": Array [
            Object {
              "audience": Object {
                "phase": "before",
                "refs": Array [
                  "actor",
                  "coinRef",
                  "jarRef",
                ],
              },
              "parts": Array [
                Object {
                  "slot": "actor",
                },
                Object {
                  "text": " puts ",
                },
                Object {
                  "ref": "coinRef",
                },
                Object {
                  "text": " in ",
                },
                Object {
                  "ref": "jarRef",
                },
              ],
            },
          ],
        },
      ],
      "referents": Array [
        Object {
          "id": "OBJECT#Coin",
          "refKey": "coinRef",
          "shortName": "coin",
        },
        Object {
          "id": "OBJECT#Jar",
          "refKey": "jarRef",
          "shortName": "jar",
        },
      ],
      "words": "put the coin in the jar",
    },
    "confidence": 0.9,
    "type": "CommandAttempt",
  },
  "stubCalls": Object {
    "acme": 0,
    "classify": 1,
    "embedSpan": 0,
    "enrich": 0,
    "parse": 1,
  },
}
`;

exports[`characterization fixture: published attempt (ISS8203 slice 0) containment commands (Parse path) put the coin in the table when the coin sits inside the jar (withinObject locus) 1`] = `
Object {
  "result": Object {
    "attempt": Object {
      "actions": Array [
        Object {
          "challenges": Array [],
          "desiredResult": Object {
            "containment": "In",
            "from": Object {
              "referentTarget": Object {
                "groundedId": "OBJECT#Coin",
                "referentType": "objectSpan",
                "shortName": "coin",
                "span": "coin",
                "stableRefKey": "coinRef",
              },
              "referentType": "currentHost",
            },
            "kind": "change",
            "object": Object {
              "groundedId": "OBJECT#Coin",
              "referentType": "objectSpan",
              "shortName": "coin",
              "span": "coin",
              "stableRefKey": "coinRef",
            },
            "primitive": "transferMembership",
            "to": Object {
              "groundedId": "OBJECT#Table",
              "referentType": "objectSpan",
              "shortName": "table",
              "span": "table",
              "stableRefKey": "tableRef",
            },
          },
          "desiredResultDescription": "Put coin in table",
          "id": "<minted id 1>",
          "kind": "position",
        },
      ],
      "narrationUnits": Array [
        Object {
          "covers": Array [
            "<minted id 1>",
          ],
          "variants": Array [
            Object {
              "audience": Object {
                "phase": "before",
                "refs": Array [
                  "actor",
                  "coinRef",
                  "tableRef",
                ],
              },
              "parts": Array [
                Object {
                  "slot": "actor",
                },
                Object {
                  "text": " puts ",
                },
                Object {
                  "ref": "coinRef",
                },
                Object {
                  "text": " in ",
                },
                Object {
                  "ref": "tableRef",
                },
              ],
            },
          ],
        },
      ],
      "referents": Array [
        Object {
          "id": "OBJECT#Coin",
          "refKey": "coinRef",
          "shortName": "coin",
        },
        Object {
          "id": "OBJECT#Table",
          "refKey": "tableRef",
          "shortName": "table",
        },
      ],
      "words": "put the coin in the table",
    },
    "confidence": 0.9,
    "type": "CommandAttempt",
  },
  "stubCalls": Object {
    "acme": 0,
    "classify": 1,
    "embedSpan": 0,
    "enrich": 0,
    "parse": 1,
  },
}
`;

exports[`characterization fixture: published attempt (ISS8203 slice 0) containment commands (Parse path) put the coin on the table 1`] = `
Object {
  "result": Object {
    "attempt": Object {
      "actions": Array [
        Object {
          "challenges": Array [],
          "desiredResult": Object {
            "containment": "On",
            "from": Object {
              "referentTarget": Object {
                "groundedId": "OBJECT#Coin",
                "referentType": "objectSpan",
                "shortName": "coin",
                "span": "coin",
                "stableRefKey": "coinRef",
              },
              "referentType": "currentHost",
            },
            "kind": "change",
            "object": Object {
              "groundedId": "OBJECT#Coin",
              "referentType": "objectSpan",
              "shortName": "coin",
              "span": "coin",
              "stableRefKey": "coinRef",
            },
            "primitive": "transferMembership",
            "to": Object {
              "groundedId": "OBJECT#Table",
              "referentType": "objectSpan",
              "shortName": "table",
              "span": "table",
              "stableRefKey": "tableRef",
            },
          },
          "desiredResultDescription": "Put coin on table",
          "id": "<minted id 1>",
          "kind": "position",
        },
      ],
      "narrationUnits": Array [
        Object {
          "covers": Array [
            "<minted id 1>",
          ],
          "variants": Array [
            Object {
              "audience": Object {
                "phase": "before",
                "refs": Array [
                  "actor",
                  "coinRef",
                  "tableRef",
                ],
              },
              "parts": Array [
                Object {
                  "slot": "actor",
                },
                Object {
                  "text": " puts ",
                },
                Object {
                  "ref": "coinRef",
                },
                Object {
                  "text": " on ",
                },
                Object {
                  "ref": "tableRef",
                },
              ],
            },
          ],
        },
      ],
      "referents": Array [
        Object {
          "id": "OBJECT#Coin",
          "refKey": "coinRef",
          "shortName": "coin",
        },
        Object {
          "id": "OBJECT#Table",
          "refKey": "tableRef",
          "shortName": "table",
        },
      ],
      "words": "put the coin on the table",
    },
    "confidence": 0.9,
    "type": "CommandAttempt",
  },
  "stubCalls": Object {
    "acme": 0,
    "classify": 1,
    "embedSpan": 0,
    "enrich": 0,
    "parse": 1,
  },
}
`;

exports[`characterization fixture: published attempt (ISS8203 slice 0) containment commands (Parse path) put the rope on the table when the rope is lashed to the post (boundary edge: slice 3 expands it) 1`] = `
Object {
  "result": Object {
    "attempt": Object {
      "actions": Array [
        Object {
          "challenges": Array [
            Object {
              "description": "Boundary relation to dissolve: is lashed to.",
              "edge": Object {
                "from": "OBJECT#Rope",
                "kind": "Custom",
                "relationLabel": "is lashed to",
                "to": "OBJECT#Post",
              },
              "id": "customEdge:<minted id 1>:OBJECT#Rope|OBJECT#Post|Custom|is lashed to",
              "kind": "customEdge",
              "verdict": Object {
                "kind": "met",
              },
            },
          ],
          "desiredResult": Object {
            "kind": "change",
            "primitive": "dissolveRelation",
            "relationKind": "Custom",
            "relationLabel": "is lashed to",
            "subject": Object {
              "groundedId": "OBJECT#Rope",
              "groundedPresence": Array [
                "ROOM#Bridge",
              ],
              "referentType": "graphNode",
            },
            "target": Object {
              "groundedId": "OBJECT#Post",
              "groundedPresence": Array [
                "ROOM#Bridge",
              ],
              "referentType": "graphNode",
            },
          },
          "desiredResultDescription": "Dissolve: is lashed to",
          "id": "<minted id 2>",
          "kind": "position",
        },
        Object {
          "challenges": Array [],
          "desiredResult": Object {
            "containment": "On",
            "from": Object {
              "referentTarget": Object {
                "groundedId": "OBJECT#Rope",
                "referentType": "objectSpan",
                "shortName": "rope",
                "span": "rope",
                "stableRefKey": "ropeRef",
              },
              "referentType": "currentHost",
            },
            "kind": "change",
            "object": Object {
              "groundedId": "OBJECT#Rope",
              "referentType": "objectSpan",
              "shortName": "rope",
              "span": "rope",
              "stableRefKey": "ropeRef",
            },
            "primitive": "transferMembership",
            "to": Object {
              "groundedId": "OBJECT#Table",
              "referentType": "objectSpan",
              "shortName": "table",
              "span": "table",
              "stableRefKey": "tableRef",
            },
          },
          "desiredResultDescription": "Put rope on table",
          "id": "<minted id 1>",
          "kind": "position",
        },
      ],
      "narrationUnits": Array [
        Object {
          "covers": Array [
            "<minted id 1>",
          ],
          "variants": Array [
            Object {
              "audience": Object {
                "phase": "before",
                "refs": Array [
                  "actor",
                  "ropeRef",
                  "tableRef",
                ],
              },
              "parts": Array [
                Object {
                  "slot": "actor",
                },
                Object {
                  "text": " puts ",
                },
                Object {
                  "ref": "ropeRef",
                },
                Object {
                  "text": " on ",
                },
                Object {
                  "ref": "tableRef",
                },
              ],
            },
          ],
        },
        Object {
          "covers": Array [
            "<minted id 2>",
          ],
          "variants": Array [
            Object {
              "audience": Object {
                "phase": "before",
                "refs": Array [
                  "graphNode:OBJECT#Rope",
                  "graphNode:OBJECT#Post",
                ],
              },
              "parts": Array [
                Object {
                  "slot": "actor",
                },
                Object {
                  "text": " frees ",
                },
                Object {
                  "ref": "graphNode:OBJECT#Rope",
                },
                Object {
                  "text": " from ",
                },
                Object {
                  "ref": "graphNode:OBJECT#Post",
                },
              ],
            },
          ],
        },
      ],
      "referents": Array [
        Object {
          "id": "OBJECT#Rope",
          "refKey": "ropeRef",
          "shortName": "rope",
        },
        Object {
          "id": "OBJECT#Table",
          "refKey": "tableRef",
          "shortName": "table",
        },
      ],
      "words": "put the rope on the table",
    },
    "confidence": 0.9,
    "type": "CommandAttempt",
  },
  "stubCalls": Object {
    "acme": 0,
    "classify": 1,
    "embedSpan": 0,
    "enrich": 0,
    "parse": 1,
  },
}
`;

exports[`characterization fixture: published attempt (ISS8203 slice 0) deterministic take / get / drop (fast path) drop broom 1`] = `
Object {
  "result": Object {
    "attempt": Object {
      "actions": Array [
        Object {
          "challenges": Array [],
          "desiredResult": Object {
            "from": Object {
              "referentType": "actingCharacter",
            },
            "kind": "change",
            "object": Object {
              "groundedId": "OBJECT#Broom",
              "referentType": "objectSpan",
              "shortName": "broom",
              "span": "broom",
              "stableRefKey": "broomRef",
            },
            "primitive": "transferMembership",
            "to": Object {
              "referentTarget": Object {
                "referentType": "actingCharacter",
              },
              "referentType": "currentHost",
            },
          },
          "desiredResultDescription": "Drop: broom",
          "id": "<minted id 1>",
          "kind": "position",
        },
      ],
      "narrationUnits": Array [
        Object {
          "covers": Array [
            "<minted id 1>",
          ],
          "variants": Array [
            Object {
              "audience": Object {
                "phase": "before",
                "refs": Array [
                  "actor",
                  "broomRef",
                ],
              },
              "parts": Array [
                Object {
                  "slot": "actor",
                },
                Object {
                  "text": " drops ",
                },
                Object {
                  "ref": "broomRef",
                },
              ],
            },
          ],
        },
      ],
      "referents": Array [
        Object {
          "id": "OBJECT#Broom",
          "refKey": "broomRef",
          "shortName": "broom",
        },
      ],
      "words": "drop broom",
    },
    "confidence": 1,
    "type": "CommandAttempt",
  },
  "stubCalls": Object {
    "acme": 0,
    "classify": 0,
    "embedSpan": 0,
    "enrich": 0,
    "parse": 0,
  },
}
`;

exports[`characterization fixture: published attempt (ISS8203 slice 0) deterministic take / get / drop (fast path) get broom 1`] = `
Object {
  "result": Object {
    "attempt": Object {
      "actions": Array [
        Object {
          "challenges": Array [],
          "desiredResult": Object {
            "from": Object {
              "referentTarget": Object {
                "groundedId": "OBJECT#Broom",
                "referentType": "objectSpan",
                "shortName": "broom",
                "span": "broom",
                "stableRefKey": "broomRef",
              },
              "referentType": "currentHost",
            },
            "kind": "change",
            "object": Object {
              "groundedId": "OBJECT#Broom",
              "referentType": "objectSpan",
              "shortName": "broom",
              "span": "broom",
              "stableRefKey": "broomRef",
            },
            "primitive": "transferMembership",
            "to": Object {
              "referentType": "actingCharacter",
            },
          },
          "desiredResultDescription": "Take: broom",
          "id": "<minted id 1>",
          "kind": "position",
        },
      ],
      "narrationUnits": Array [
        Object {
          "covers": Array [
            "<minted id 1>",
          ],
          "variants": Array [
            Object {
              "audience": Object {
                "phase": "before",
                "refs": Array [
                  "actor",
                  "broomRef",
                ],
              },
              "parts": Array [
                Object {
                  "slot": "actor",
                },
                Object {
                  "text": " picks up ",
                },
                Object {
                  "ref": "broomRef",
                },
              ],
            },
          ],
        },
      ],
      "referents": Array [
        Object {
          "id": "OBJECT#Broom",
          "refKey": "broomRef",
          "shortName": "broom",
        },
      ],
      "words": "get broom",
    },
    "confidence": 1,
    "type": "CommandAttempt",
  },
  "stubCalls": Object {
    "acme": 0,
    "classify": 0,
    "embedSpan": 0,
    "enrich": 0,
    "parse": 0,
  },
}
`;

exports[`characterization fixture: published attempt (ISS8203 slice 0) deterministic take / get / drop (fast path) get the broom through Parse, when the span is not in the room labels 1`] = `
Object {
  "result": Object {
    "attempt": Object {
      "actions": Array [
        Object {
          "challenges": Array [],
          "desiredResult": Object {
            "from": Object {
              "referentTarget": Object {
                "groundedId": "OBJECT#Broom",
                "referentType": "objectSpan",
                "shortName": "broom",
                "span": "broom",
                "stableRefKey": "broomRef",
              },
              "referentType": "currentHost",
            },
            "kind": "change",
            "object": Object {
              "groundedId": "OBJECT#Broom",
              "referentType": "objectSpan",
              "shortName": "broom",
              "span": "broom",
              "stableRefKey": "broomRef",
            },
            "primitive": "transferMembership",
            "to": Object {
              "referentType": "actingCharacter",
            },
          },
          "desiredResultDescription": "Take: broom",
          "id": "<minted id 1>",
          "kind": "position",
        },
      ],
      "narrationUnits": Array [
        Object {
          "covers": Array [
            "<minted id 1>",
          ],
          "variants": Array [
            Object {
              "audience": Object {
                "phase": "before",
                "refs": Array [
                  "actor",
                  "broomRef",
                ],
              },
              "parts": Array [
                Object {
                  "slot": "actor",
                },
                Object {
                  "text": " picks up ",
                },
                Object {
                  "ref": "broomRef",
                },
              ],
            },
          ],
        },
      ],
      "referents": Array [
        Object {
          "id": "OBJECT#Broom",
          "refKey": "broomRef",
          "shortName": "broom",
        },
      ],
      "words": "get the broom",
    },
    "confidence": 0.9,
    "type": "CommandAttempt",
  },
  "stubCalls": Object {
    "acme": 0,
    "classify": 1,
    "embedSpan": 0,
    "enrich": 0,
    "parse": 1,
  },
}
`;

exports[`characterization fixture: published attempt (ISS8203 slice 0) deterministic take / get / drop (fast path) take broom 1`] = `
Object {
  "result": Object {
    "attempt": Object {
      "actions": Array [
        Object {
          "challenges": Array [],
          "desiredResult": Object {
            "from": Object {
              "referentTarget": Object {
                "groundedId": "OBJECT#Broom",
                "referentType": "objectSpan",
                "shortName": "broom",
                "span": "broom",
                "stableRefKey": "broomRef",
              },
              "referentType": "currentHost",
            },
            "kind": "change",
            "object": Object {
              "groundedId": "OBJECT#Broom",
              "referentType": "objectSpan",
              "shortName": "broom",
              "span": "broom",
              "stableRefKey": "broomRef",
            },
            "primitive": "transferMembership",
            "to": Object {
              "referentType": "actingCharacter",
            },
          },
          "desiredResultDescription": "Take: broom",
          "id": "<minted id 1>",
          "kind": "position",
        },
      ],
      "narrationUnits": Array [
        Object {
          "covers": Array [
            "<minted id 1>",
          ],
          "variants": Array [
            Object {
              "audience": Object {
                "phase": "before",
                "refs": Array [
                  "actor",
                  "broomRef",
                ],
              },
              "parts": Array [
                Object {
                  "slot": "actor",
                },
                Object {
                  "text": " picks up ",
                },
                Object {
                  "ref": "broomRef",
                },
              ],
            },
          ],
        },
      ],
      "referents": Array [
        Object {
          "id": "OBJECT#Broom",
          "refKey": "broomRef",
          "shortName": "broom",
        },
      ],
      "words": "take broom",
    },
    "confidence": 1,
    "type": "CommandAttempt",
  },
  "stubCalls": Object {
    "acme": 0,
    "classify": 0,
    "embedSpan": 0,
    "enrich": 0,
    "parse": 0,
  },
}
`;

exports[`characterization fixture: published attempt (ISS8203 slice 0) deterministic take / get / drop (fast path) take broom when the broom touches an exit (abstains: no adjudicator judges exit contact yet) 1`] = `
Object {
  "result": Object {
    "confidence": 1,
    "reason": "Exit contact: the moved object touches an exit, which has no graph rule for moving it.",
    "type": "Abstain",
  },
  "stubCalls": Object {
    "acme": 0,
    "classify": 0,
    "embedSpan": 0,
    "enrich": 0,
    "parse": 0,
  },
}
`;

exports[`characterization fixture: published attempt (ISS8203 slice 0) deterministic take / get / drop (fast path) take rope when the rope is lashed to the post (Custom edge: dissolve, then take) 1`] = `
Object {
  "result": Object {
    "attempt": Object {
      "actions": Array [
        Object {
          "challenges": Array [
            Object {
              "description": "Boundary relation to dissolve: is lashed to.",
              "edge": Object {
                "from": "OBJECT#Rope",
                "kind": "Custom",
                "relationLabel": "is lashed to",
                "to": "OBJECT#Post",
              },
              "id": "customEdge:<minted id 1>:OBJECT#Rope|OBJECT#Post|Custom|is lashed to",
              "kind": "customEdge",
              "verdict": Object {
                "kind": "met",
              },
            },
          ],
          "desiredResult": Object {
            "kind": "change",
            "primitive": "dissolveRelation",
            "relationKind": "Custom",
            "relationLabel": "is lashed to",
            "subject": Object {
              "groundedId": "OBJECT#Rope",
              "groundedPresence": Array [
                "ROOM#Bridge",
              ],
              "referentType": "graphNode",
            },
            "target": Object {
              "groundedId": "OBJECT#Post",
              "groundedPresence": Array [
                "ROOM#Bridge",
              ],
              "referentType": "graphNode",
            },
          },
          "desiredResultDescription": "Dissolve: is lashed to",
          "id": "<minted id 2>",
          "kind": "position",
        },
        Object {
          "challenges": Array [],
          "desiredResult": Object {
            "from": Object {
              "referentTarget": Object {
                "groundedId": "OBJECT#Rope",
                "referentType": "objectSpan",
                "shortName": "rope",
                "span": "rope",
                "stableRefKey": "ropeRef",
              },
              "referentType": "currentHost",
            },
            "kind": "change",
            "object": Object {
              "groundedId": "OBJECT#Rope",
              "referentType": "objectSpan",
              "shortName": "rope",
              "span": "rope",
              "stableRefKey": "ropeRef",
            },
            "primitive": "transferMembership",
            "to": Object {
              "referentType": "actingCharacter",
            },
          },
          "desiredResultDescription": "Take: rope",
          "id": "<minted id 1>",
          "kind": "position",
        },
      ],
      "narrationUnits": Array [
        Object {
          "covers": Array [
            "<minted id 1>",
          ],
          "variants": Array [
            Object {
              "audience": Object {
                "phase": "before",
                "refs": Array [
                  "actor",
                  "ropeRef",
                ],
              },
              "parts": Array [
                Object {
                  "slot": "actor",
                },
                Object {
                  "text": " picks up ",
                },
                Object {
                  "ref": "ropeRef",
                },
              ],
            },
          ],
        },
        Object {
          "covers": Array [
            "<minted id 2>",
          ],
          "variants": Array [
            Object {
              "audience": Object {
                "phase": "before",
                "refs": Array [
                  "graphNode:OBJECT#Rope",
                  "graphNode:OBJECT#Post",
                ],
              },
              "parts": Array [
                Object {
                  "slot": "actor",
                },
                Object {
                  "text": " frees ",
                },
                Object {
                  "ref": "graphNode:OBJECT#Rope",
                },
                Object {
                  "text": " from ",
                },
                Object {
                  "ref": "graphNode:OBJECT#Post",
                },
              ],
            },
          ],
        },
      ],
      "referents": Array [
        Object {
          "id": "OBJECT#Rope",
          "refKey": "ropeRef",
          "shortName": "rope",
        },
      ],
      "words": "take rope",
    },
    "confidence": 1,
    "type": "CommandAttempt",
  },
  "stubCalls": Object {
    "acme": 0,
    "classify": 0,
    "embedSpan": 0,
    "enrich": 0,
    "parse": 0,
  },
}
`;

exports[`characterization fixture: published attempt (ISS8203 slice 0) deterministic take / get / drop (fast path) take rope when the rope is under the post (a peer subject-move is met: the rope comes out) 1`] = `
Object {
  "result": Object {
    "attempt": Object {
      "actions": Array [
        Object {
          "challenges": Array [
            Object {
              "description": "Boundary relation to dissolve: under.",
              "edge": Object {
                "from": "OBJECT#Rope",
                "kind": "Custom",
                "relationLabel": "under",
                "to": "OBJECT#Post",
              },
              "id": "customEdge:<minted id 1>:OBJECT#Rope|OBJECT#Post|Custom|under",
              "kind": "customEdge",
              "verdict": Object {
                "kind": "met",
              },
            },
          ],
          "desiredResult": Object {
            "kind": "change",
            "primitive": "dissolveRelation",
            "relationKind": "Custom",
            "relationLabel": "under",
            "subject": Object {
              "groundedId": "OBJECT#Rope",
              "groundedPresence": Array [
                "ROOM#Bridge",
              ],
              "referentType": "graphNode",
            },
            "target": Object {
              "groundedId": "OBJECT#Post",
              "groundedPresence": Array [
                "ROOM#Bridge",
              ],
              "referentType": "graphNode",
            },
          },
          "desiredResultDescription": "Dissolve: under",
          "id": "<minted id 2>",
          "kind": "position",
        },
        Object {
          "challenges": Array [],
          "desiredResult": Object {
            "from": Object {
              "referentTarget": Object {
                "groundedId": "OBJECT#Rope",
                "referentType": "objectSpan",
                "shortName": "rope",
                "span": "rope",
                "stableRefKey": "ropeRef",
              },
              "referentType": "currentHost",
            },
            "kind": "change",
            "object": Object {
              "groundedId": "OBJECT#Rope",
              "referentType": "objectSpan",
              "shortName": "rope",
              "span": "rope",
              "stableRefKey": "ropeRef",
            },
            "primitive": "transferMembership",
            "to": Object {
              "referentType": "actingCharacter",
            },
          },
          "desiredResultDescription": "Take: rope",
          "id": "<minted id 1>",
          "kind": "position",
        },
      ],
      "narrationUnits": Array [
        Object {
          "covers": Array [
            "<minted id 1>",
          ],
          "variants": Array [
            Object {
              "audience": Object {
                "phase": "before",
                "refs": Array [
                  "actor",
                  "ropeRef",
                ],
              },
              "parts": Array [
                Object {
                  "slot": "actor",
                },
                Object {
                  "text": " picks up ",
                },
                Object {
                  "ref": "ropeRef",
                },
              ],
            },
          ],
        },
        Object {
          "covers": Array [
            "<minted id 2>",
          ],
          "variants": Array [
            Object {
              "audience": Object {
                "phase": "before",
                "refs": Array [
                  "graphNode:OBJECT#Rope",
                  "graphNode:OBJECT#Post",
                ],
              },
              "parts": Array [
                Object {
                  "slot": "actor",
                },
                Object {
                  "text": " frees ",
                },
                Object {
                  "ref": "graphNode:OBJECT#Rope",
                },
                Object {
                  "text": " from ",
                },
                Object {
                  "ref": "graphNode:OBJECT#Post",
                },
              ],
            },
          ],
        },
      ],
      "referents": Array [
        Object {
          "id": "OBJECT#Rope",
          "refKey": "ropeRef",
          "shortName": "rope",
        },
      ],
      "words": "take rope",
    },
    "confidence": 1,
    "type": "CommandAttempt",
  },
  "stubCalls": Object {
    "acme": 0,
    "classify": 0,
    "embedSpan": 0,
    "enrich": 0,
    "parse": 0,
  },
}
`;

exports[`characterization fixture: published attempt (ISS8203 slice 0) look and no-room look rocket skates 1`] = `
Object {
  "result": Object {
    "attempt": Object {
      "actions": Array [
        Object {
          "challenges": Array [],
          "description": "Look at the rocket skates",
          "id": "<minted id 1>",
          "kind": "narrate",
          "referents": Array [
            Object {
              "groundedId": "OBJECT#RocketSkates",
              "referentType": "objectSpan",
              "shortName": "rocket skates",
              "span": "rocket skates",
              "stableRefKey": "rocketSkatesRef",
            },
          ],
        },
      ],
      "narrationUnits": Array [],
      "referents": Array [
        Object {
          "id": "OBJECT#RocketSkates",
          "refKey": "rocketSkatesRef",
          "shortName": "rocket skates",
        },
      ],
      "words": "look rocket skates",
    },
    "confidence": 0.9,
    "type": "CommandAttempt",
  },
  "stubCalls": Object {
    "acme": 0,
    "classify": 1,
    "embedSpan": 0,
    "enrich": 0,
    "parse": 1,
  },
}
`;

exports[`characterization fixture: published attempt (ISS8203 slice 0) look and no-room put the broom under the table with no room (no peer parse: Unimplemented) 1`] = `
Object {
  "result": Object {
    "confidence": 0.9,
    "type": "Unimplemented",
  },
  "stubCalls": Object {
    "acme": 0,
    "classify": 1,
    "embedSpan": 0,
    "enrich": 0,
    "parse": 1,
  },
}
`;

exports[`characterization fixture: published attempt (ISS8203 slice 0) look and no-room put the coin in the jar with no room 1`] = `
Object {
  "result": Object {
    "errorMessage": "ObjectManipulation resolution failed: you are not in a room",
    "type": "Error",
  },
  "stubCalls": Object {
    "acme": 0,
    "classify": 1,
    "embedSpan": 0,
    "enrich": 0,
    "parse": 1,
  },
}
`;

exports[`characterization fixture: published attempt (ISS8203 slice 0) look and no-room take broom with no room 1`] = `
Object {
  "result": Object {
    "errorMessage": "ObjectManipulation resolution failed: object has no membership host",
    "type": "Error",
  },
  "stubCalls": Object {
    "acme": 0,
    "classify": 0,
    "embedSpan": 0,
    "enrich": 0,
    "parse": 0,
  },
}
`;

exports[`characterization fixture: published attempt (ISS8203 slice 0) look and no-room take broom with two broom candidates (Consult on the fast path) 1`] = `
Object {
  "result": Object {
    "alternatives": Array [
      Object {
        "objectId": "OBJECT#Broom",
        "proposedCommand": "take the broom",
      },
      Object {
        "objectId": "OBJECT#Mop",
        "proposedCommand": "take the broom",
      },
    ],
    "confidence": 1,
    "type": "Consult",
  },
  "stubCalls": Object {
    "acme": 0,
    "classify": 0,
    "embedSpan": 0,
    "enrich": 0,
    "parse": 0,
  },
}
`;

exports[`characterization fixture: published attempt (ISS8203 slice 0) relational commands (Parse path) put the broom against the table (no peer parse: Unimplemented) 1`] = `
Object {
  "result": Object {
    "confidence": 0.9,
    "type": "Unimplemented",
  },
  "stubCalls": Object {
    "acme": 0,
    "classify": 1,
    "embedSpan": 0,
    "enrich": 0,
    "parse": 1,
  },
}
`;

exports[`characterization fixture: published attempt (ISS8203 slice 0) relational commands (Parse path) put the broom partof the table (no peer parse: Unimplemented) 1`] = `
Object {
  "result": Object {
    "confidence": 0.9,
    "type": "Unimplemented",
  },
  "stubCalls": Object {
    "acme": 0,
    "classify": 1,
    "embedSpan": 0,
    "enrich": 0,
    "parse": 1,
  },
}
`;

exports[`characterization fixture: published attempt (ISS8203 slice 0) relational commands (Parse path) put the broom under the table with two table candidates (no peer parse: Unimplemented) 1`] = `
Object {
  "result": Object {
    "confidence": 0.9,
    "type": "Unimplemented",
  },
  "stubCalls": Object {
    "acme": 0,
    "classify": 1,
    "embedSpan": 0,
    "enrich": 0,
    "parse": 1,
  },
}
`;

exports[`characterization fixture: published attempt (ISS8203 slice 0) relational commands (Parse path) take the rope off the post (today a two-candidate Consult, not a dissolve) 1`] = `
Object {
  "result": Object {
    "alternatives": Array [
      Object {
        "objectId": "OBJECT#Rope",
        "proposedCommand": "take the rope",
      },
      Object {
        "objectId": "OBJECT#Post",
        "proposedCommand": "take the post",
      },
    ],
    "confidence": 1,
    "type": "Consult",
  },
  "stubCalls": Object {
    "acme": 0,
    "classify": 0,
    "embedSpan": 1,
    "enrich": 0,
    "parse": 0,
  },
}
`;

exports[`characterization fixture: published attempt (ISS8203 slice 0) relational commands (Parse path) tie the rope to the post (no peer parse: Unimplemented) 1`] = `
Object {
  "result": Object {
    "confidence": 0.9,
    "type": "Unimplemented",
  },
  "stubCalls": Object {
    "acme": 0,
    "classify": 1,
    "embedSpan": 0,
    "enrich": 0,
    "parse": 1,
  },
}
`;
